force-app/main/default/objects/Case/fields/Nivel_de_derivacion__c.field-meta.xml
<CustomField>
    <fullName>Nivel_de_derivacion__c</fullName>
    <label>Nivel de derivación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nivel 1</fullName>
            </value>
            <value>
                <fullName>Nivel 2</fullName>
            </value>
            <value>
                <fullName>Nivel 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>