force-app/main/default/objects/Case/fields/No_reasigna_sla2__c.field-meta.xml
<CustomField>
    <fullName>No_reasigna_sla2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No reasigna sla2</label>
    <type>Checkbox</type>
</CustomField>