force-app/main/default/objects/Case/fields/No_reasigna_sla__c.field-meta.xml
<CustomField>
    <fullName>No_reasigna_sla__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Se utiliza para que no vuelva a un iniciar un SLA y posteriormente se pueda cerrar el SLA</description>
    <label>No reasigna sla</label>
    <type>Checkbox</type>
</CustomField>