force-app/main/default/objects/Case/fields/No_tiene_SLA__c.field-meta.xml
<CustomField>
    <fullName>No_tiene_SLA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Se utiliza para poder cerrar los casos que no tienen SLA</description>
    <label>No tiene SLA</label>
    <type>Checkbox</type>
</CustomField>