force-app/main/default/objects/Case/fields/Nombre_efector_realizador__c.field-meta.xml
<CustomField>
    <fullName>Nombre_efector_realizador__c</fullName>
    <formula>Efector_realizador__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre efector realizador</label>
    <type>Text</type>
</CustomField>