force-app/main/default/objects/Case/fields/Nombres__c.field-meta.xml
<CustomField>
    <fullName>Nombres__c</fullName>
    <formula>Account.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombres</label>
    <type>Text</type>
</CustomField>