force-app/main/default/objects/Case/fields/Nota__c.field-meta.xml
<CustomField>
    <fullName>Nota__c</fullName>
    <label>Nota</label>
    <type>TextArea</type>
</CustomField>