force-app/main/default/objects/Case/fields/Nro_AP__c.field-meta.xml
<CustomField>
    <fullName>Nro_AP__c</fullName>
    <externalId>true</externalId>
    <label>Nro AP</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>