force-app/main/default/objects/Case/fields/Nro_comprobante__c.field-meta.xml
<CustomField>
    <fullName>Nro_comprobante__c</fullName>
    <label>Número de Comprobante</label>
    <length>255</length>
    <type>Text</type>
</CustomField>