force-app/main/default/objects/Case/fields/Nro_de_solicitud_SS__c.field-meta.xml
<CustomField>
    <fullName>Nro_de_solicitud_SS__c</fullName>
    <label>Nro de solicitud SS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>