force-app/main/default/objects/Case/fields/Nro_documento_cuenta__c.field-meta.xml
<CustomField>
    <fullName>Nro_documento_cuenta__c</fullName>
    <description>Este campo formula se utiliza en la regla de validacion validar cuil que sea el mismo numero del numero de documento de la cuenta, ya que tomando el campo directamente de la cuenta no lo toma y no salta la regla</description>
    <formula>Account.Numero_de_documento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nro documento cuenta</label>
    <type>Text</type>
</CustomField>