force-app/main/default/objects/Case/fields/Nuevo_segmento__c.field-meta.xml
<CustomField>
    <fullName>Nuevo_segmento__c</fullName>
    <label>Nuevo segmento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OBLDIR</fullName>
            </value>
            <value>
                <fullName>OBLEMP</fullName>
            </value>
            <value>
                <fullName>VOLDIR</fullName>
            </value>
            <value>
                <fullName>VOLEMP</fullName>
            </value>
            <value>
                <fullName>DTCAP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>