force-app/main/default/objects/Case/fields/Numero_CBU__c.field-meta.xml
<CustomField>
    <fullName>Numero_CBU__c</fullName>
    <description>Campo se utilizar en Interfaz financiera</description>
    <label>Numero CBU</label>
    <length>22</length>
    <type>Text</type>
</CustomField>