force-app/main/default/objects/Case/fields/Numero_CBU_cobro_de_cuota__c.field-meta.xml
<CustomField>
    <fullName>Numero_CBU_cobro_de_cuota__c</fullName>
    <label>Número CBU cobro de cuota</label>
    <length>22</length>
    <type>Text</type>
</CustomField>