force-app/main/default/objects/Case/fields/Numero_de_asociado_SS__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_asociado_SS__c</fullName>
    <label>Numero de asociado SS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>