force-app/main/default/objects/Case/fields/Numero_de_tarjeta_de_credito__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_tarjeta_de_credito__c</fullName>
    <label>Numero de tarjeta de crédito</label>
    <length>18</length>
    <type>Text</type>
</CustomField>