force-app/main/default/objects/Case/fields/Numero_Lote_credencial__c.field-meta.xml
<CustomField>
    <fullName>Numero_Lote_credencial__c</fullName>
    <label>Numero Lote credencial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>