force-app/main/default/objects/Case/fields/Obra_Social2__c.field-meta.xml
<CustomField>
    <fullName>Obra_Social2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Obra Social</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Obra social</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Casos (Obra Social)</relationshipLabel>
    <relationshipName>Obras_sociales</relationshipName>
    <type>Lookup</type>
</CustomField>