force-app/main/default/objects/Case/fields/Obra_Social__c.field-meta.xml
<CustomField>
    <fullName>Obra_Social__c</fullName>
    <formula>Account.Obra_social_nombre__c &amp;&quot;,&quot;&amp; Account.Codigo_de_obra_social__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Obra Social</label>
    <type>Text</type>
</CustomField>