force-app/main/default/objects/Case/fields/Orden_de_Compra__c.field-meta.xml
<CustomField>
    <fullName>Orden_de_Compra__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Orden de Compra</label>
    <referenceTo>Orden_de_Compra__c</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>