force-app/main/default/objects/Case/fields/Organismo__c.field-meta.xml
<CustomField>
    <fullName>Organismo__c</fullName>
    <description>Campo  tipo picklist, que se usa en el objeto caso para los registros tipo Expedientes legales, en la sección &quot;datos del expediente&quot;</description>
    <label>Organismo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SSSalud</fullName>
            </value>
            <value>
                <fullName>Defensa del Consumidor</fullName>
            </value>
            <value>
                <fullName>OMIC</fullName>
            </value>
            <value>
                <fullName>Defensoría del Pueblo</fullName>
            </value>
            <value>
                <fullName>INAES</fullName>
            </value>
            <value>
                <fullName>INADI</fullName>
            </value>
            <value>
                <fullName>Juzgado Provincial</fullName>
            </value>
            <value>
                <fullName>Juzgado Federal</fullName>
            </value>
            <value>
                <fullName>Organismo recaudador</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>