force-app/main/default/objects/Case/fields/Otro_valor__c.field-meta.xml
<CustomField>
    <fullName>Otro_valor__c</fullName>
    <label>Otro valor</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>