force-app/main/default/objects/Case/fields/Otros_Mail__c.field-meta.xml
<CustomField>
    <fullName>Otros_Mail__c</fullName>
    <label>Otros Mail</label>
    <type>Email</type>
</CustomField>