force-app/main/default/objects/Case/fields/Otros_motivos_de_baja__c.field-meta.xml
<CustomField>
    <fullName>Otros_motivos_de_baja__c</fullName>
    <label>Otros motivos de baja</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Por trato recibido en la atención personal en Centros de atención/Agencias</fullName>
            </value>
            <value>
                <fullName>Por trato recibido en la atención telefónica del CDC</fullName>
            </value>
            <value>
                <fullName>Por la agilidad en las respuestas en consultas/autorizaciones de prestaciones/reclamos</fullName>
            </value>
            <value>
                <fullName>Por la calidad de la resolución de los problemas</fullName>
            </value>
            <value>
                <fullName>Por diferencias en la facturación/cobranzas/aportes/reintegros/copagos/descuentos/promociones</fullName>
            </value>
            <value>
                <fullName>Por cuestiones de entrega de credencial/recepción de factura</fullName>
            </value>
            <value>
                <fullName>Por topes en sesiones</fullName>
            </value>
            <value>
                <fullName>Por diferencias administrativas al momento del alta</fullName>
            </value>
            <value>
                <fullName>El precio de la cobertura en relación al uso que le da</fullName>
            </value>
            <value>
                <fullName>Los incrementos en la cuota según lo que marca la SuperIntendencia de Servicios de Salud</fullName>
            </value>
            <value>
                <fullName>Cambio de estado de empleo, de trabajador a desempleado, sale del mercado laboral</fullName>
            </value>
            <value>
                <fullName>Cambio de lugar de trabajo, continuidad en el mercado laboral</fullName>
            </value>
            <value>
                <fullName>El valor de la cuota actual</fullName>
            </value>
            <value>
                <fullName>Cambio de cobertura a una obra social sindical</fullName>
            </value>
            <value>
                <fullName>Cambio de cobertura a otra prepaga</fullName>
            </value>
            <value>
                <fullName>Por la cantidad de profesionales de la cartilla en su zona</fullName>
            </value>
            <value>
                <fullName>Por el Nivel de oferta de servicios</fullName>
            </value>
            <value>
                <fullName>Por el cobro de plus por parte del profesional</fullName>
            </value>
            <value>
                <fullName>Por la calidad de los profesionales de la cartilla</fullName>
            </value>
            <value>
                <fullName>Por % de descuentos en farmacias</fullName>
            </value>
            <value>
                <fullName>Por decisión de un tercero</fullName>
            </value>
            <value>
                <fullName>Por fallecimiento</fullName>
            </value>
            <value>
                <fullName>Por Divorcio/separación</fullName>
            </value>
            <value>
                <fullName>Por alcanzar la mayoría de edad y dejar de ser parte del grupo familiar</fullName>
            </value>
            <value>
                <fullName>Otros motivos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>