force-app/main/default/objects/Case/fields/Otros_motivos_de_bajas__c.field-meta.xml
<CustomField>
    <fullName>Otros_motivos_de_bajas__c</fullName>
    <label>Otros motivos de bajas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>