force-app/main/default/objects/Case/fields/Parentesco__c.field-meta.xml
<CustomField>
    <fullName>Parentesco__c</fullName>
    <formula>TEXT(Account.Parentesco__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parentesco</label>
    <type>Text</type>
</CustomField>