force-app/main/default/objects/Case/fields/Pendiente_de_Respuesta_de_OS__c.field-meta.xml
<CustomField>
    <fullName>Pendiente_de_Respuesta_de_OS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>JIRA DES-10010 requerido por Equipo de Discapacidad que permita identificar los presentados de los no presentados</description>
    <label>Pendiente de Respuesta de OS</label>
    <type>Checkbox</type>
</CustomField>