force-app/main/default/objects/Case/fields/Periodo_de_bonificacion__c.field-meta.xml
<CustomField>
    <fullName>Periodo_de_bonificacion__c</fullName>
    <label>Periodo de bonificación</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3 meses</fullName>
            </value>
            <value>
                <fullName>6 meses</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>