force-app/main/default/objects/Case/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <formula>TEXT(Account.Plan_Nombre__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plan</label>
    <type>Text</type>
</CustomField>