force-app/main/default/objects/Case/fields/Plandespegue__c.field-meta.xml
<CustomField>
    <fullName>Plandespegue__c</fullName>
    <label>Plan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AS200</fullName>
            </value>
            <value>
                <fullName>AS204</fullName>
            </value>
            <value>
                <fullName>AS300</fullName>
            </value>
            <value>
                <fullName>AS400</fullName>
            </value>
            <value>
                <fullName>AS500</fullName>
            </value>
            <value>
                <fullName>11 PMO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>