force-app/main/default/objects/Case/fields/Posible_candidato_BOT__c.field-meta.xml
<CustomField>
    <fullName>Posible_candidato_BOT__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Utilizado para crear un candidato relacionado al caso del BOT</description>
    <label>Posible candidato BOT</label>
    <type>Checkbox</type>
</CustomField>