force-app/main/default/objects/Case/fields/Pre_existencia__c.field-meta.xml
<CustomField>
    <fullName>Pre_existencia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre-Existencia</label>
    <type>Checkbox</type>
</CustomField>