force-app/main/default/objects/Case/fields/Prescriptor__c.field-meta.xml
<CustomField>
    <fullName>Prescriptor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prescriptor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Efector</value>
        </filterItems>
        <filterItems>
            <field>Account.Es_Profesional__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Account.Estado__c</field>
            <operation>equals</operation>
            <value>Activo</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Casos (Prescriptor)</relationshipLabel>
    <relationshipName>Casos2</relationshipName>
    <type>Lookup</type>
</CustomField>