force-app/main/default/objects/Case/fields/Prestacion__c.field-meta.xml
<CustomField>
    <fullName>Prestacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo tipo de búsqueda con el objeto nomenclador de prestación, se usa para el tipo de registro en el objeto caso de expedientes legales, en la sección &quot;detalles del caso&quot;</description>
    <label>Prestación</label>
    <referenceTo>Nomenclador_de_Prestacion__c</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>