force-app/main/default/objects/Case/fields/Prestaciones_en_auditoria__c.field-meta.xml
<CustomField>
    <fullName>Prestaciones_en_auditoria__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prestaciones en auditoría</label>
    <type>Checkbox</type>
</CustomField>