force-app/main/default/objects/Case/fields/Propietario_del_caso__c.field-meta.xml
<CustomField>
    <fullName>Propietario_del_caso__c</fullName>
    <formula>Owner:Queue.QueueName &amp; Owner:User.CommunityNickname</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Propietario del caso</label>
    <type>Text</type>
</CustomField>