force-app/main/default/objects/Case/fields/Provincia__c.field-meta.xml
<CustomField>
    <fullName>Provincia__c</fullName>
    <label>Provincia</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Buenos Aires</fullName>
            </value>
            <value>
                <fullName>Catamarca</fullName>
            </value>
            <value>
                <fullName>Chaco</fullName>
            </value>
            <value>
                <fullName>Chubut</fullName>
            </value>
            <value>
                <fullName>Ciudad autónoma de Buenos Aires</fullName>
            </value>
            <value>
                <fullName>Córdoba</fullName>
            </value>
            <value>
                <fullName>Corrientes</fullName>
            </value>
            <value>
                <fullName>Entre Ríos</fullName>
            </value>
            <value>
                <fullName>Formosa</fullName>
            </value>
            <value>
                <fullName>Jujuy</fullName>
            </value>
            <value>
                <fullName>La Pampa</fullName>
            </value>
            <value>
                <fullName>La Rioja</fullName>
            </value>
            <value>
                <fullName>Mendoza</fullName>
            </value>
            <value>
                <fullName>Misiones</fullName>
            </value>
            <value>
                <fullName>Neuquén</fullName>
            </value>
            <value>
                <fullName>Rio Negro</fullName>
            </value>
            <value>
                <fullName>Salta</fullName>
            </value>
            <value>
                <fullName>San Juan</fullName>
            </value>
            <value>
                <fullName>San Luis</fullName>
            </value>
            <value>
                <fullName>Santa Cruz</fullName>
            </value>
            <value>
                <fullName>Santa Fe</fullName>
            </value>
            <value>
                <fullName>Santiago del Estero</fullName>
            </value>
            <value>
                <fullName>Tierra del Fuego</fullName>
            </value>
            <value>
                <fullName>Tucuman</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>