force-app/main/default/objects/Case/fields/Que_es_lo_mejor_de_Avalian_para_Ud__c.field-meta.xml
<CustomField>
    <fullName>Que_es_lo_mejor_de_Avalian_para_Ud__c</fullName>
    <label>¿Qué es lo mejor de Avalian para Ud.?</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>