force-app/main/default/objects/Case/fields/Que_obra_social__c.field-meta.xml
<CustomField>
    <fullName>Que_obra_social__c</fullName>
    <label>¿Qué obra social?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>