force-app/main/default/objects/Case/fields/Razon_social__c.field-meta.xml
<CustomField>
    <fullName>Razon_social__c</fullName>
    <label>Razón social</label>
    <length>255</length>
    <type>Text</type>
</CustomField>