force-app/main/default/objects/Case/fields/Rechazo_informado_al_socio__c.field-meta.xml
<CustomField>
    <fullName>Rechazo_informado_al_socio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rechazo informado al socio</label>
    <type>Checkbox</type>
</CustomField>