force-app/main/default/objects/Case/fields/Recomendacion__c.field-meta.xml
<CustomField>
    <fullName>Recomendacion__c</fullName>
    <label>Recomendación</label>
    <length>255</length>
    <type>Text</type>
</CustomField>