force-app/main/default/objects/Case/fields/Recomendaria_avalian__c.field-meta.xml
<CustomField>
    <fullName>Recomendaria_avalian__c</fullName>
    <label>¿Recomendaría Avalian?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Si, con seguridad</fullName>
            </value>
            <value>
                <fullName>Probablemente si</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Probablemente no</fullName>
            </value>
            <value>
                <fullName>No, con seguridad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>