force-app/main/default/objects/Case/fields/Recurso_de_apelacion_administ__c.field-meta.xml
<CustomField>
    <fullName>Recurso_de_apelacion_administ__c</fullName>
    <label>Recurso de apelación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Presentado</fullName>
                <default>true</default>
                <label>Presentado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>