force-app/main/default/objects/Case/fields/Recurso_de_apelacion_administartivo__c.field-meta.xml
<CustomField>
    <fullName>Recurso_de_apelacion_administartivo__c</fullName>
    <label>Recurso de apelación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Presentado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>