force-app/main/default/objects/Case/fields/Reintegro_Total__c.field-meta.xml
<CustomField>
    <fullName>Reintegro_Total__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Reintegro Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>