force-app/main/default/objects/Case/fields/Resolucion__c.field-meta.xml
<CustomField>
    <fullName>Resolucion__c</fullName>
    <label>Resolución</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Imputación</fullName>
            </value>
            <value>
                <fullName>Se rechaza</fullName>
            </value>
            <value>
                <fullName>Acuerdo de partes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>