force-app/main/default/objects/Case/fields/Resolucion_apelacion__c.field-meta.xml
<CustomField>
    <fullName>Resolucion_apelacion__c</fullName>
    <label>Resolución apelación</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Recurso_de_apelacion_administartivo__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rechaza imputación</fullName>
            </value>
            <value>
                <fullName>Confirma imputación</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>