force-app/main/default/objects/Case/fields/Responsable_de_presupuesto__c.field-meta.xml
<CustomField>
    <fullName>Responsable_de_presupuesto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsable presupuesto / compras</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Casos_responsable_presupuesto</relationshipName>
    <type>Lookup</type>
</CustomField>