force-app/main/default/objects/Case/fields/Retencion_Lograda__c.field-meta.xml
<CustomField>
    <fullName>Retencion_Lograda__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retención Lograda</label>
    <type>Checkbox</type>
</CustomField>