force-app/main/default/objects/Case/fields/Scoring_del_asociado__c.field-meta.xml
<CustomField>
    <fullName>Scoring_del_asociado__c</fullName>
    <formula>Account.Scoring__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scoring del asociado</label>
    <type>Text</type>
</CustomField>