force-app/main/default/objects/Case/fields/Segmento__c.field-meta.xml
<CustomField>
    <fullName>Segmento__c</fullName>
    <formula>TEXT(Account.Segmento_de_grupo_familiar__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Segmento</label>
    <type>Text</type>
</CustomField>