force-app/main/default/objects/Case/fields/Segmento_de_grupo_familiar__c.field-meta.xml
<CustomField>
    <fullName>Segmento_de_grupo_familiar__c</fullName>
    <label>Segmento de grupo familiar</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VOLDIR</fullName>
            </value>
            <value>
                <fullName>OBLDIR</fullName>
            </value>
            <value>
                <fullName>VOLEMP</fullName>
            </value>
            <value>
                <fullName>OBLEMP</fullName>
            </value>
            <value>
                <fullName>DTCAP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>