force-app/main/default/objects/Case/fields/Sentencia_de_camara__c.field-meta.xml
<CustomField>
    <fullName>Sentencia_de_camara__c</fullName>
    <label>Sentencia de cámara</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Recurso_de_apelacion_procesal__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rechaza</fullName>
            </value>
            <value>
                <fullName>Confirma</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>