force-app/main/default/objects/Case/fields/Sentencia_de_fondo__c.field-meta.xml
<CustomField>
    <fullName>Sentencia_de_fondo__c</fullName>
    <label>Sentencia de fondo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acuerdo de partes</fullName>
            </value>
            <value>
                <fullName>Hace lugar</fullName>
            </value>
            <value>
                <fullName>Rechaza acción judicial</fullName>
            </value>
            <value>
                <fullName>Caducidad de instancia</fullName>
            </value>
            <value>
                <fullName>Cuestión abstracta</fullName>
            </value>
            <value>
                <fullName>Allanamiento</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>